jwt token, login token, get character.
